Change title and header from 'Smart Placement' to 'Internship Tracker'
Updated the title and header to 'Internship Tracker'.

--- a/index.Html
+++ b/index.Html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Smart Placement / Internship Tracker</title>
+    <title> Internship Tracker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <h1>Smart Placement / Internship Tracker</h1>
+    <h1> Internship Tracker</h1>
 </header>
 
 <section class="form-section">
