Revamp HTML structure and improve styling

--- a/index.Html
+++ b/index.Html
@@ -2,70 +2,163 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Internship Tracker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Smart Placement & Internship Tracker</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="header-content">
+                <div class="icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
+                <h1>Smart Placement & Internship Tracker</h1>
+                <p class="subtitle">Track, update, and manage all your placement and internship applications in one place. Your data is saved automatically in your browser.</p>
+            </div>
+        </div>
+    </header>
 
-<header>
-    <h1> Internship Tracker</h1>
-</header>
+    <main class="container">
+        <!-- Add Application Form -->
+        <section class="form-section">
+            <h2><i class="fas fa-plus-circle"></i> Add New Application</h2>
+            <form id="applicationForm">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="companyName">Company Name</label>
+                        <input type="text" id="companyName" placeholder="e.g., Google, Microsoft" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="position">Role / Position</label>
+                        <input type="text" id="position" placeholder="e.g., Software Engineer Intern" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="stage">Application Stage</label>
+                        <select id="stage" required>
+                            <option value="">Select Stage</option>
+                            <option value="Applied">Applied</option>
+                            <option value="Online Assessment (OA)">Online Assessment (OA)</option>
+                            <option value="Interview">Interview</option>
+                            <option value="Offer">Offer</option>
+                            <option value="Rejected">Rejected</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="result">Result</label>
+                        <select id="result" required>
+                            <option value="Pending">Pending</option>
+                            <option value="Cleared">Cleared</option>
+                            <option value="Rejected">Rejected</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="appliedDate">Applied Date</label>
+                        <input type="date" id="appliedDate" required>
+                    </div>
+                </div>
+                <div class="form-actions">
+                    <button type="reset" class="btn" id="resetBtn">Reset Form</button>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-save"></i> Add Application
+                    </button>
+                </div>
+            </form>
+        </section>
 
-<section class="form-section">
-    <h2>Add Application</h2>
-    <form id="applicationForm">
-        <input type="text" id="company" placeholder="Company Name" required>
-        <input type="text" id="role" placeholder="Role / Position" required>
+        <!-- Applications List -->
+        <section class="list-section">
+            <div class="section-header">
+                <h2><i class="fas fa-list-alt"></i> Your Applications</h2>
+                <div id="appCount">0 applications</div>
+            </div>
+            
+            <div id="applicationsContainer">
+                <!-- Applications will be dynamically inserted here -->
+                <div class="empty-state" id="emptyState">
+                    <i class="fas fa-clipboard-list"></i>
+                    <h3>No applications yet</h3>
+                    <p>Add your first placement or internship application using the form above.</p>
+                </div>
+                
+                <table class="applications-table" id="applicationsTable" style="display: none;">
+                    <thead>
+                        <tr>
+                            <th>Company Name</th>
+                            <th>Role / Position</th>
+                            <th>Stage</th>
+                            <th>Result</th>
+                            <th>Applied Date</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="applicationsTableBody">
+                        <!-- Table rows will be dynamically inserted here -->
+                    </tbody>
+                </table>
+            </div>
+        </section>
 
-        <select id="stage" required>
-            <option value="">Select Stage</option>
-            <option>Applied</option>
-            <option>Online Assessment</option>
-            <option>Interview</option>
-            <option>Offer</option>
-            <option>Rejected</option>
-        </select>
+        <!-- Summary Section -->
+        <section class="summary-section">
+            <h2><i class="fas fa-chart-pie"></i> Application Summary</h2>
+            <div class="summary-cards">
+                <div class="summary-card total">
+                    <div class="summary-icon">
+                        <i class="fas fa-layer-group"></i>
+                    </div>
+                    <div class="summary-value" id="totalApplications">0</div>
+                    <div class="summary-label">Total Applications</div>
+                </div>
+                <div class="summary-card interviews">
+                    <div class="summary-icon">
+                        <i class="fas fa-comments"></i>
+                    </div>
+                    <div class="summary-value" id="interviewCount">0</div>
+                    <div class="summary-label">Interviews</div>
+                </div>
+                <div class="summary-card offers">
+                    <div class="summary-icon">
+                        <i class="fas fa-trophy"></i>
+                    </div>
+                    <div class="summary-value" id="offerCount">0</div>
+                    <div class="summary-label">Offers</div>
+                </div>
+                <div class="summary-card rejections">
+                    <div class="summary-icon">
+                        <i class="fas fa-times-circle"></i>
+                    </div>
+                    <div class="summary-value" id="rejectionCount">0</div>
+                    <div class="summary-label">Rejections</div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-        <select id="result" required>
-            <option value="">Select Result</option>
-            <option>Pending</option>
-            <option>Cleared</option>
-            <option>Rejected</option>
-        </select>
-
-        <input type="date" id="date" required>
-
-        <button type="submit">Add Application</button>
-    </form>
-</section>
-
-<section class="list-section">
-    <h2>Applications List</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Company</th>
-                <th>Role</th>
-                <th>Stage</th>
-                <th>Result</th>
-                <th>Date</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody id="applicationList"></tbody>
-    </table>
-</section>
-
-<section class="summary-section">
-    <h2>Summary</h2>
-    <div class="summary-box">
-        <p>Total Applications: <span id="total">0</span></p>
-        <p>Interviews: <span id="interviews">0</span></p>
-        <p>Offers: <span id="offers">0</span></p>
-        <p>Rejections: <span id="rejections">0</span></p>
+    <!-- Delete Confirmation Modal -->
+    <div class="modal" id="deleteModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Confirm Deletion</h3>
+                <button class="close-modal" id="closeModal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this application? This action cannot be undone.</p>
+                <p><strong id="deleteAppDetails"></strong></p>
+            </div>
+            <div class="modal-actions">
+                <button class="btn" id="cancelDelete">Cancel</button>
+                <button class="btn btn-danger" id="confirmDelete">Delete Application</button>
+            </div>
+        </div>
     </div>
-</section>
 
-<script src="script.js"></script>
+    <!-- Success Notification -->
+    <div id="successNotification">
+        <i class="fas fa-check-circle"></i> <span id="notificationText">Application added successfully!</span>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
